[package]
name = "zeep"
version = "0.1.2"
authors = ["mibes <mibes@avaya.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
Upd
[dependencies]
roxmltree = "^0.10.0"
log = "^0.4.8"
log4rs = "^0.11.0"
Inflector = "^0.11.4"
yaserde = "^0.4.2"
yaserde_derive = "^0.4.2"
clap = "^2.33.0"
xml-rs = "^0.8.0"
reqwest = { version = "^0.10.4", features =["blocking"]}
tokio = { version = "^0.2.17", features = ["full"] }
async-trait = "^0.1.26"