[package]
name = "soap_client"
version = "0.1.0"
authors = ["mibes <mibes@avaya.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.10.0"
log = "0.4.8"
log4rs = "0.11.0"
Inflector = "0.11.4"
yaserde = "0.3.13"
yaserde_derive = "0.3.13"
clap = "2.33.0"
xml-rs = "0.8.0"
