[package]
name = "zeep-lib"
version = "0.1.3"
authors = ["mibes <mibes@avaya.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "^0.14"
log = "^0.4.8"
log4rs = "^1.0"
Inflector = "^0.11.4"
yaserde = "^0.6"
yaserde_derive = "^0.6"
clap = "^2.33.0"
xml-rs = "^0.8.0"
reqwest = { version = "^0.11", features =["blocking"]}
tokio = { version = "^1.5", features = ["full"] }
async-trait = "^0.1.26"