[package]
name = "zeep-lib"
version = "0.1.6"
authors = ["mibes <mibes@avaya.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.18"
log = "0.4"
env_logger = "0.10"
Inflector = "0.11"
yaserde = "0.8"
yaserde_derive = "0.8"
clap = "4"
xml-rs = "0.8"
reqwest = { version = "0.11", default-features = false, features =["blocking", "rustls-tls"]}
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"