[package]
name = "zeep-lib"
version = "0.2.0"
authors = ["mibes <mibes@avaya.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.20"
log = "0.4"
env_logger = "0.11"
Inflector = "0.11"
yaserde = "0.12"
yaserde_derive = "0.12"
xml-rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
const_format = { version = "0.2", features = ["fmt"] }


[[example]]
name = "hello"
path = "../examples/hello/main.rs"

#[[example]]
#name = "weather"
#path = "../examples/weather/main.rs"

[[example]]
name = "temperature"
path = "../examples/temperature/main.rs"

[[example]]
name = "exchange"
path = "../examples/exchange/main.rs"

[[example]]
name = "aacc"
path = "../examples/aacc/main.rs"
